--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ a:focus{
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
 
-.overview {
+.container > div:first-child {
   grid-column: 1 / -1;
   background-image: url('../images/header.jpg'); 
 	background-repeat: no-repeat;
